# slashcmd

./: .gitignore  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: auth.rs  cli.rs  daemon.rs  edge.rs  gemini.rs  groq.rs  highlight.rs  ipc.rs  logs.rs  main.rs  prompt.rs  tui.rs
site/: _redirects  index.html  install.sh  styles.css
site/cli-auth/: index.html
site/cli-auth/callback/: index.html
site/upgrade/: index.html
worker/: groq-warm-proxy.ts  wrangler.example.toml
