[package]
name = "slashcmd"
version = "0.1.0"
edition = "2021"
description = "Natural language to shell commands"

[[bin]]
name = "slashcmd"
path = "src/main.rs"

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
